# btc-max-knowledge-agent

./: .env.example  .gitignore  ARGON2_UPGRADE_NOTES.md  AUDIO_STREAMING_IMPLEMENTATION_SUMMARY.md  AUTO_SETUP_IMPROVEMENTS.md  CIRCUIT_BREAKER_IMPLEMENTATION_SUMMARY.md  CI_LINTING_OPTIMIZATION.md  CLEANUP_SUMMARY.txt  CLEAN_MCP_RESPONSE_REFACTORING.md  CLI_ARGUMENTS_ENHANCEMENT_SUMMARY.md  CLI_ENHANCEMENT_SUMMARY.txt  DEMO_RESULT_FORMATTING_IMPROVEMENTS.md  DOCSTRING_CONSISTENCY_FIX.md  ENDPOINT_CONSISTENCY_FIX.md  IMPORT_REFACTORING_GUIDE.md  INSTALL_DEVELOPMENT.md  IS_MODULE_AVAILABLE_IMPROVEMENTS.md  JSON_DUMPS_FORMATTING_IMPROVEMENTS.md  LOGGING_OPTIMIZATION_SUMMARY.md  PATH_HANDLING_IMPROVEMENTS_SUMMARY.md  PATH_SETUP_FIX_SUMMARY.md  PRODUCTION_CODE_CLEANUP_SUMMARY.md  QUERY_TRUNCATION_CHANGES_SUMMARY.md  RAG_API_URL_CONSISTENCY_VERIFICATION.md  RAG_TEST_SCRIPT_ENHANCEMENTS.md  README.dev.md  README.md  RECENT_IMPROVEMENTS.md  REFACTORING_SUMMARY.txt  REGEX_OPTIMIZATION_SUMMARY.md  REORGANIZATION_SUMMARY.md  SECURITY_POLICY.md  SEVERITY_FUNCTION_IMPROVEMENTS.md  STEP4_SUMMARY.md  STEP5_SUMMARY.md  SUCCESS_EVENTS_LOGIC_FIX.md  TEST_ASSERTION_FIX.md  TEST_CONFIGURATION_SUMMARY.md  TODO_COMPLETION_SUMMARY.md  TTS_UI_IMPLEMENTATION_SUMMARY.md  (+84 more)
.github/: YAML_INDENTATION_GUIDE.md
.kilocode/: mcp.json
.pilot_sample/: bitcoin_dapps.txt  bitcoin_fundamentals.txt  bitcoin_layer2.txt  bitcoin_news.txt  bitcoin_overview.txt  bitcoin_regulation.txt  bitcoin_test.txt
config/: gunicorn.conf.py
docs/: ADMIN_SECURITY_SUMMARY.md  ADMIN_SETUP.md  MULTI_TIER_CACHE.md  (+6 more)
(+283 files in other folders)
